--- a/styles/style.css
+++ b/styles/style.css
@@ -10,7 +10,7 @@
   padding: 92px 50px;
 }
 
-.header__links-list {
+.links-list {
   display: flex;
   gap: 32px;
   list-style: circle;
@@ -18,16 +18,16 @@
   font-weight: 400;
 }
 
-.header__links-list-item_no-bullit {
+.links-list-item_no-bullit {
   list-style: none;
 }
 
-.header__link {
+.link {
   text-decoration: underline;
   text-underline-position: under;
 }
 
-.header__link_active {
+.link_active {
   text-decoration: none;
 }
 
@@ -77,7 +77,7 @@
 }
 
 .letter-spacing-extended {
-  letter-spacing: 0.33em;
+  letter-spacing: 0.6em;
 }
 
 .no-letter-spacing {
@@ -89,20 +89,17 @@
   font-size: 100px;
   font-weight: 700;
   text-transform: uppercase;
-  letter-spacing: 0.035em;
+  letter-spacing: 0.3em;
 }
 
 .aligned-text_center {
   text-align: center;
   line-height: 1;
-  line-height: 100px;
-  padding-right: 55px;
 }
 
 .aligned-text_righ {
   text-align: right;
   line-height: 1;
-  line-height: 100px;
 }
 
 .cover__description {
@@ -161,33 +158,6 @@
   list-style: none;
 }
 
-.card_type_film {
-  background-image: url(../images/card-lot-01.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.card_type_book {
-  background-image: url(../images/card-lot-02.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.card_type_picture {
-  background-image: url(../images/card-lot-03.jpg);
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.card-link {
-  color: #fff;
-  font-weight: 700;
-  line-height: 1.2;
-  position: relative;
-  text-decoration: none;
-  z-index: 1;
-}
-
 .card {
   display: flex;
   flex-direction: column;
@@ -197,6 +167,29 @@
   background-position: center;
   min-width: 430px;
   min-height: 450px;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.card_type_film {
+  background-image: url(../images/card-lot-01.jpg);
+}
+
+.card_type_book {
+  background-image: url(../images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+  background-image: url(../images/card-lot-03.jpg);
+}
+
+.card-link {
+  color: #fff;
+  font-weight: 700;
+  line-height: 1.2;
+  position: relative;
+  text-decoration: none;
+  z-index: 1;
 }
 
 .card__title {
@@ -281,7 +274,7 @@
   list-style: none;
 }
 
-.footer__social-list-item {
+.footer__social-list {
   display: flex;
   gap: 45px;
   list-style: none;
