--- a/styles/style.css
+++ b/styles/style.css
@@ -119,7 +119,7 @@
   font-weight: 400;
   line-height: 1.27;
   padding-right: 78px;
-  word-spacing: 20px;
+  word-spacing: 18px;
 }
 
 .bet-button {
@@ -231,6 +231,7 @@
   justify-content: center;
   align-items: center;
   align-self: start;
+  margin: 3px 13px 0 0;
 }
 
 .about__logo-image {
@@ -243,12 +244,13 @@
   font-size: 40px;
   font-weight: 700;
   text-transform: uppercase;
-  padding-bottom: 70px;
+  padding-bottom: 75px;
 }
 
 .about__text {
   font-size: 20px;
   font-weight: 400;
+  line-height: 1.17;
 }
 
 .about__column {
@@ -264,7 +266,7 @@
   justify-content: space-between;
   flex-wrap: wrap;
   align-items: start;
-  padding: 180px 50px 90px;
+  padding: 185px 50px 90px;
 }
 
 .footer__menu-list {
